--- a/kivy.kv
+++ b/kivy.kv
@@ -539,7 +539,7 @@ Screen:
                             MDTextField:
                                 id: search_students
                                 mode: "round"
-                                size_hint: .7, 0.5
+                                size_hint: (.7, 0.5 )if platform_device.text == 'windows' else (.7, 1.2)
                                 pos_hint: {"center_x": .5, "center_y": .5}
                                 hint_text: 'Поиск по ФИО'
                                 on_text: app.threading_search(self.text)
